--- a/app/templates/order_form.html
+++ b/app/templates/order_form.html
@@ -52,6 +52,10 @@
             <label for="quantity">Quantity:</label>
             <input type="number" id="quantity" name="quantity" min="1" required>
         </div>
+        <div class="form-group">
+            <label for="price">Price:</label>
+            <input type="number" id="price" name="price" min="1" required>
+        </div>
         <button type="submit">Submit Order</button>
     </form>
 </body>
